2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (debug-in-emacs): Moved (WITH-BINDINGS
	*SLDB-PRINTER-BINDINGS* ...), from here...
	(sldb-loop): ... to here. Otherwise results from a user doing an
	eval-in-frame were truncated.

	Reported by Jeff Workman.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (hash-table-to-alist): New function.
	([method] emacs-inspect (hash-table)): Sort keys if they're all
	numbers, symbols, or strings.

	Adapted from Willem Broekema.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-backend.lisp (warn-unimplemented-interfaces):
	Bind *PRINT-PRETTY* to T. Otherwise no sugar formatting on CCL.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-pretty-package-name): Signalled an error on
	simple symbols; fix that!

	Reported by Geoff Wozniak.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-current-form-path): Use
	`slime-current-parser-state'.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el ([test] fancy-symbol-names): New, hopefully
	comprehensive, test for funky symbol names.
	(slime-check-fancy-symbol-name): Helper.
	(slime-exit-vertical-bars): New function to move out from |foo|.
	(slime-symbol-constituent-at): New predicate to test whether the
	character at point is a valid symbol constituent.
	(slime-beginning-of-symbol, slime-end-of-symbol): Rewritten using
	above two functions and `forward-sexp' that correctly parses
	escapes etc.
	(slime-sexp-at-point): Consider thing at point a symbol first.

2009-02-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-forward-cruft): Forward whitespace, reader
	conditonals, comments. Splitted from `slime-forward-sexp'.
	(slime-pretty-package-name): Use it.

2009-02-24  Tobias C. Rittweiler  <tcr@freebits.de>

	Re-checkin my change from 2009-02-14. It seems I didn't actually
	commit it.

2009-02-22  Tobias C. Rittweiler  <tcr@freebits.de>
